--- a/SDV_CAR_REAR_LED_MATRIX_DISPLAY_testing/Objects/Uart_project.build_log.htm
+++ b/SDV_CAR_REAR_LED_MATRIX_DISPLAY_testing/Objects/Uart_project.build_log.htm
@@ -5,51 +5,37 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.33.0.0
 Copyright (C) 2020 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Ashish B, ss, LIC=----
+License Information: Andesh H, Supremology, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.33.0.0
-Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
-C Compiler:      Armcc.exe V5.06 update 7 (build 960)
-Assembler:       Armasm.exe V5.06 update 7 (build 960)
-Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
-Library Manager: ArmAr.exe V5.06 update 7 (build 960)
-Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
+Toolchain Path:  C:\Keil_v5\ARM\ARMCLANG\Bin
+C Compiler:      ArmClang.exe V6.15
+Assembler:       Armasm.exe V6.15
+Linker/Locator:  ArmLink.exe V6.15
+Library Manager: ArmAr.exe V6.15
+Hex Converter:   FromElf.exe V6.15
 CPU DLL:         SARMCM3.DLL V5.33.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
 Target DLL:      Segger\JL2CM3.dll V2.99.38.0
 Dialog DLL:      LPC1768.DLL
  
 <h2>Project:</h2>
-D:\Ashish_B\Microcontroller\Micro_Workspace\LPC1786_Project\UART\Uart_project.uvprojx
-Project File Date:  09/23/2024
+C:\Users\DELL\Downloads\UART_Project-main\UART_Project-main\SDV_CAR_REAR_LED_MATRIX_DISPLAY_testing\Uart_project.uvprojx
+Project File Date:  07/04/2025
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-assembling startup_LPC17xx.s...
-compiling PIN_LPC17xx.c...
-compiling system_LPC17xx.c...
-compiling GPIO_LPC17xx.c...
-compiling UART.c...
-UART.h(5): warning:  #1-D: last line of file ends without a newline
-  void UART_printf(char*);
-UART.c: 1 warning, 0 errors
-linking...
-.\Objects\Uart_project.axf: Warning: L6914W: option ropi ignored when using --scatter.
-.\Objects\Uart_project.axf: Warning: L6914W: option rwpi ignored when using --scatter.
-Program Size: Code=884 RO-data=252 RW-data=12 ZI-data=612  
-Finished: 0 information, 2 warning and 0 error messages.
-FromELF: creating hex file...
-".\Objects\Uart_project.axf" - 0 Error(s), 3 Warning(s).
+*** Using Compiler 'V6.15', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
+Build target 'Target 1'
+".\Objects\Uart_project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.7.0.pack
-                ARM.CMSIS.5.7.0
-                CMSIS (Cortex Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.4.0
+                https://www.keil.com/pack/ARM.CMSIS.6.1.0.pack
+                ARM.CMSIS.6.1.0
+                CMSIS (Common Microcontroller Software Interface Standard)
+   * Component: CORE Version: 6.1.0
 
 Package Vendor: Keil
                 https://www.keil.com/pack/Keil.LPC1700_DFP.2.7.2.pack
@@ -62,28 +48,28 @@ Package Vendor: Keil
 <h2>Collection of Component include folders:</h2>
   .\RTE\Device\LPC1768
   .\RTE\_Target_1
-  C:\Users\SWENG03\ARM\CMSIS\5.7.0\CMSIS\Core\Include
-  C:\Users\SWENG03\Keil\LPC1700_DFP\2.7.2\Device\Include
-  C:\Users\SWENG03\Keil\LPC1700_DFP\2.7.2\RTE_Driver
+  C:\Users\DELL\AppData\Local\Arm\Packs\ARM\CMSIS\6.1.0\CMSIS\Core\Include
+  C:\Users\DELL\AppData\Local\Arm\Packs\Keil\LPC1700_DFP\2.7.2\Device\Include
+  C:\Users\DELL\AppData\Local\Arm\Packs\Keil\LPC1700_DFP\2.7.2\RTE_Driver
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.4.0
+   * Component: ARM::CMSIS:CORE:6.1.0
 
    * Component: Keil::Device:GPIO:1.1.0
       Include file:  RTE_Driver\GPIO_LPC17xx.h
       Source file:   RTE_Driver\GPIO_LPC17xx.c
 
    * Component: Keil::Device:PIN:1.0.0
-      Include file:  RTE_Driver\PIN_LPC17xx.h
       Source file:   RTE_Driver\PIN_LPC17xx.c
+      Include file:  RTE_Driver\PIN_LPC17xx.h
 
    * Component: Keil::Device:Startup:1.0.0
       Include file:  Device\Include\LPC17xx.h
-      Source file:   Device\Source\system_LPC17xx.c
       Include file:  RTE_Driver\Config\RTE_Device.h
       Source file:   Device\Source\ARM\startup_LPC17xx.s
-Build Time Elapsed:  00:00:01
+      Source file:   Device\Source\system_LPC17xx.c
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
